--- a/KMZI_ORD/MainWindow.xaml
+++ b/KMZI_ORD/MainWindow.xaml
@@ -11,27 +11,15 @@
             <RowDefinition Height="3"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="3"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
+        <TextBox Background="LightBlue" x:Name="tbRes" Grid.Row="3"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="1">
             <Label Content="P = "/>
-            <TextBox Margin="0,0,10,0" x:Name="tbMod" Width="30"/>
-            <Label Content="n = "/>
-            <TextBox x:Name="tbN" Width="30" Margin="0,0,10,0"/>
-            <Label Content="Коэф: "/>
-            <TextBox x:Name="tbKoeff" Width="255"/>
+            <TextBox x:Name="tbMod" Width="30"/>
+            <Label Content="Koeff: " Margin="10,0,0,0"/>
+            <TextBox x:Name="tbKoeff" Width="292"/>
+            <Button Click="Btn_Click" x:Name="btnOK" Content="OK" Margin="10,0,0,0" Width="30"/>
         </StackPanel>
-        <StackPanel Grid.Row="3" Orientation="Horizontal">
-            <Label Content="n = "/>
-            <TextBox x:Name="tbN2" Width="30" Margin="0,0,10,0"/>
-            <Label Content="Коэф: "/>
-            <TextBox x:Name="tbKoeff2" Width="255"/>
-            <Button x:Name="btn" Content="OK" Width="30" Click="Btn_Click" Margin="10,0"/>
-        </StackPanel>
-        <Label Content="(ввод коэфф начинается со старшего члена)" Grid.Row="4"/>
-        <TextBlock x:Name="tblResult" Grid.RowSpan="2" Grid.Row="5" Background="LightBlue"/>
     </Grid>
 </Window>
